mv owncloud owncloud-server

--- a/inc/2-owncloud.tex
+++ b/inc/2-owncloud.tex
@@ -79,7 +79,7 @@ ownCloud Server доступен для платформ Windows и Linux, ownCl
     \item Каковы основные преимущества использования облачных технологий?
     \item В чем состоит отличие SaaS от PaaS и IaaS?
     \item В чем состоят преимущества ownCloud по сравнению с Dropbox или другими облачными хранилищами? Недостатки?
-    \item *Почему Skype можно отнести к модели SaaS?
+    \item Почему Skype можно отнести к модели SaaS?
 \end{enumerate}
 
 \clearpage
