--- a/inc/c-appendix.tex
+++ b/inc/c-appendix.tex
@@ -1,6 +1,6 @@
 \section{Пример установки ownCloud Server в Debian 7 GNU/Linux} \label{pril:c}
 
-После успешного входа в систему, в первую очередь необходимо получить права суперпользователя:
+После успешного входа в систему, в первую очередь необходимо получить права суперпользователя\footnote{Пароль пользователя не отображается на экране во время набора}:
 \begin{lstlisting}
 student@debian:~$ su -
 Password: toor
