--- a/inc/preamble.tex
+++ b/inc/preamble.tex
@@ -52,7 +52,7 @@
 
 %%% Изображения %%%
 \usepackage[dvipdfm]{graphicx}		% Подключаем пакет работы с графикой
-\graphicspath{{images/}{images/install_vb/}{images/install_debian/}{images/owncloud-server/}{images/owncloud-client/}}	% Пути к изображениям
+\graphicspath{{images/}{images/install_vb/}{images/install_debian/}{images/owncloud-server/}{images/owncloud-client/}{images/heroku/}}	% Пути к изображениям
 
 %%% Выравнивание и переносы %%%
 \sloppy					% Избавляемся от переполнений
