--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 \begin{document}
 
 \thispagestyle{empty}
-\input{inc/title} % Титул 
+\input{inc/title} % Титул
 
 \thispagestyle{empty}
 \tableofcontents % Содержание
@@ -20,6 +20,7 @@
 
 \input{inc/1-virtualbox}
 \input{inc/2-owncloud}
+\input{inc/3-heroku}
 
 \printbibliography % Список литературы
 \addcontentsline{toc}{section}{\protect\numberline{}Список литературы}
@@ -31,5 +32,6 @@
 \input{inc/b-appendix}
 \input{inc/c-appendix}
 \input{inc/d-appendix}
+\input{inc/e-appendix}
 
 \end{document}
