Добавил теорию по PaaS

--- a/inc/3-heroku.tex
+++ b/inc/3-heroku.tex
@@ -1,26 +1,59 @@
 \section[Лабораторная работа №3]{Лабораторная работа №3. \\
 Модель обслуживания PaaS (Platform-as-a-Service) на примере деплоя приложения в Heroku}
 
-\textbf{Цель работы:} ...
+\textbf{Цель работы:} ознакомиться с моделью гибкой (agile) разработки программного обеспечения, развернуть приложение на Heroku, ознакомиться с системой контроля версий Git.
 
-\subsection{Теоретические основы ...}
+\subsection{Теоретические основы методологий разработки ПО}
+За время существования информационных технологий создавались и изменялись подходы к построению информационных систем.
+Первой моделью информационной системы была монолитная архитектура.
+В данной модели на одном компьютере работали и приложения и база данных (БД), а пользователи сидели у <<тонких>> терминалов которые отображали информацию с компьютера.
 
-Теория
+У архитектуры было большое количество недостатков, поэтому впоследствии ее сменила более перспективная клиент-серверная архитектура.
+В этом случае на компьютере располагался выделенный сервер баз данных, а пользователи с <<толстых клиентов>> разгружали сервер БД.
+
+Затем появилась еще более современная многоуровневая архитектура, у которой логика приложений вынесена на отдельный компьютер, который называется сервер приложений, а пользователи работали на <<тонких>> клиентах через веб-браузеры.
+В современном информационном мире большинство приложений выполнено именно в многоуровневой архитектуре.
+Она подразумевает развертывание всей ИТ-инфраструктуры на территории заказчика.
+
+Разработка программного обеспечения также притерпела изменений в течение времени.
+Одна из самых старых методологий "--- каскадная (водопадная), подразумевает последовательное прохождение стадий, каждая из которых должна завершиться полностью до начала следующей.
+В этой модели легко управлять проектом.
+Благодаря ее жесткости, разработка проходит быстро, стоимость и срок заранее определены.
+
+В <<гибкой>> методологии разработки после каждой итерации заказчик может наблюдать результат и понимать, удовлетворяет он его или нет.
+Это одно из преимуществ гибкой модели.
+К ее недостаткам относят то, что из-за отсутствия конкретных формулировок результатов сложно оценить трудозатраты и стоимость, требуемые на разработку.
+Экстремальное программирование (XP) является одним из наиболее известных применений гибкой модели на практике.
+
+В последнее время все большую популярность приобретает именно Agile-методология, в которой необходимо на каждой итерации разработки проводить выкатку ПО, гораздо удобнее это делать с помощью PaaS-решений, таких как Heroku.
+
+Heroku является облачная PaaS-платформой, поддерживающей ряд языков программирования, таких как Java, Node.js, Scala, Clojure, Python и PHP.
+В Heroku можно легко деплоить проекты, не беспокоясь о развертывании собственно инфраструктуры для одного приложения.
+
+Приложения, работающие на Heroku, используют также DNS-сервер Heroku.
+Для каждого приложения выделяется несколько независимых виртуальных процессов, которые называются <<dynos>>.
+Они распределены по специальной виртуальной сетке <<dynos grid>>, которая состоит из нескольких серверов.
+Heroku также поддерживает систему контроля версий Git, а также подключение к аккаунту GitHub.
 
 \subsection{Порядок выполнения работы}
 
 В качестве сервера может использоваться виртуальная машина с установленным дистрибутивом Debian, ранее установленная в лабораторной работе №1.
-Виртуальная машина должна иметь доступ в сеть Интернет для скачивания нужных пакетов.
+Виртуальная машина должна иметь доступ в сеть Интернет для скачивания нужных пакетов и работы с Heroku.
 
 \begin{enumerate}
-    \item ...
-    \item ...
+    \item Зарегистрироваться в Heroku\footnote{Пример работы с Heroku представлен в прил.~\ref{pril:e}};
+    \item Создать тестовое приложение на языке Python;
+    \item Задеплоить приложение на Heroku;
+    \item Внести изменения в исходный код приложения и снова задеплоить приложение;
+    \item Ознакомиться с дополнительными возможностями Heroku и Git.
 \end{enumerate}
 
 \subsection{Контрольные вопросы}
 \begin{enumerate}
-    \item ...
-    \item ...
+    \item Почему методология гибкой разработки ПО все больше приобретает свою актуальность?
+    \item В чем преимущество использования PaaS-решений по сравнению с IaaS для развертывания своего ПО?
+    \item Для чего необходима команда commit в Git?
+    \item В чем преимущество использования Heroku по сравнению с деплоем в локальном окружении?
 \end{enumerate}
 
 \clearpage
