Убрал список литературы + мелкие поправки

--- a/inc/1-virtualbox.tex
+++ b/inc/1-virtualbox.tex
@@ -7,7 +7,7 @@
 
 Виртуализация "--- абстракция вычислительных ресурсов и предоставление пользователю системы, которая инкапсулирует (скрывает в себе) собственную реализацию.
 
-Виртуализацию можно использовать в \cite{sevconf2014}:
+Виртуализацию можно использовать в:
 \begin{itemize}
     \item консолидации серверов (позволяет мигрировать с физических серверов на виртуальные, тем самым увеличивается коэффициент использования аппаратуры, что позволяет существенно сэкономить на аппаратуре, электроэнергии и обслуживании);
     \item разработке и тестировании приложений (возможность одновременно запускать несколько различных ОС, это удобно при разработке кроссплатформенного ПО, тем самым значительно повышается качество, скорость разработки и тестирования приложений);
@@ -51,7 +51,7 @@
 Преимуществом технологии полной виртуализации является установка различных ОС, а недостатком "--- меньшая производительность, за счет накладных расходов на гипервизор, а также понижение скорости работы с подсистемой ввода/вывода из-за необходимости изоляции.
 
 Паравиртуализация имеет некоторые сходства с полной виртуализацией.
-В данном методе также используется гипервизор для разделения доступа к аппаратуре, но объединяется код, касающийся виртуализации, в ОС \cite{virtuallinux} (рис.~\ref{pic:paravirt}).
+В данном методе также используется гипервизор для разделения доступа к аппаратуре, но объединяется код, касающийся виртуализации, в ОС (рис.~\ref{pic:paravirt}).
 \begin{figure}[ht]
     \centering
 	\includegraphics[width=0.35\linewidth]{paravirt}
