--- a/inc/3-heroku.tex
+++ b/inc/3-heroku.tex
@@ -25,7 +25,7 @@
 К ее недостаткам относят то, что из-за отсутствия конкретных формулировок результатов сложно оценить трудозатраты и стоимость, требуемые на разработку.
 Экстремальное программирование (XP) является одним из наиболее известных применений гибкой модели на практике.
 
-В последнее время все большую популярность приобретает именно Agile-методология, в которой необходимо на каждой итерации разработки проводить разввертку новой версии ПО, гораздо удобнее это делать с помощью PaaS-решений, таких как Heroku.
+В последнее время все большую популярность приобретает именно Agile-методология, в которой необходимо на каждой итерации разработки проводить развертку новой версии ПО, гораздо удобнее это делать с помощью PaaS-решений, таких как Heroku.
 
 Heroku является облачной PaaS-платформой, поддерживающей ряд языков программирования, таких как Java, Node.js, Scala, Clojure, Python и PHP.
 В Heroku можно легко развертывать (деплоить) проекты, не беспокоясь о развертывании собственной инфраструктуры для одного приложения.
