--- a/inc/preamble.tex
+++ b/inc/preamble.tex
@@ -47,7 +47,8 @@
     colorlinks, linkcolor={linkcolor},
     citecolor={citecolor}, urlcolor={urlcolor},
     pdfauthor={Amet Umerov},
-    pdftitle={Cloud computing and GRID},
+    pdfproducer={https://github.com/Amet13/metod-oblaka-grid},
+    pdftitle={Cloud computing}
 }
 
 %%% Изображения %%%
@@ -58,12 +59,6 @@
 \sloppy					% Избавляемся от переполнений
 \clubpenalty=10000		% Запрещаем разрыв страницы после первой строки абзаца
 \widowpenalty=10000		% Запрещаем разрыв страницы после последней строки абзаца
-
-%%% Библиография %%%
-\makeatletter
-\bibliographystyle{utf8gost705u}	% Оформляем библиографию в соответствии с ГОСТ 7.0.5
-\renewcommand{\@biblabel}[1]{#1.}	% Заменяем библиографию с квадратных скобок на точку:
-\makeatother
 
 %%% Колонтитулы %%%
 \usepackage{fancyhdr}
@@ -78,11 +73,6 @@
     {\rm{\thepage \hfil \thesection.~\Sectionname}\strut}\hrule}}
 \makeatother
     \fancyhf{} % Очистка текущих значений номеров страниц
-
-%%% Библиография %%%
-\usepackage[backend=biber,bibencoding=utf8,sorting=none]{biblatex}
-\usepackage{csquotes}
-\bibliography{inc/bib1.bib}
 
 %%% Подсветка кода %%%
 \usepackage{color}
