--- a/inc/title.tex
+++ b/inc/title.tex
@@ -1,6 +1,5 @@
 %%% Титульный лист %%%
 
-%\thispagestyle{empty} % Убрать колонтитулы
 \begin{center}
 \Large{Севастопольский государственный университет}
 \end{center}
@@ -10,7 +9,7 @@
 \begin{center}
 \Huge{Методические указания \\
 к выполнению лабораторных работ \\
-по дисциплине <<Основы облачных и GRID-технологий>>} % Заголовок
+по дисциплине <<Основы облачных технологий>>} % Заголовок
 
 \vspace{1em}
 \Large{А.Р.~Умеров}\footnote{\texttt{admin@amet13.name}} % Автор
