--- a/inc/2-owncloud.tex
+++ b/inc/2-owncloud.tex
@@ -5,7 +5,7 @@
 
 \subsection{Теоретические основы облачных вычислений}
 
-Облачные вычисления (<<облака>>, Cloud computing) "--- модель предоставления вычислительных ресурсов, охватывающая все, начиная от приложений и до центров обработки данных (ЦОД), через Интернет при условии оплаты за фактическое использование. \cite{cloud}
+Облачные вычисления (<<облака>>, Cloud computing) "--- модель предоставления вычислительных ресурсов, охватывающая все, начиная от приложений и до центров обработки данных (ЦОД), через Интернет при условии оплаты за фактическое использование.
 
 Одной из первых, кто стал внедрять услугу облачных вычислений стала компания Amazon, в то время (2002~г.) она еще являлась книжным Интернет-магазином, который впоследствии перерос, благодаря этим внедрениям, в одну из мощнейших технологических компаний.
 Уже в 2006~г. был запущен проект под названием Computing Cloud (Amazon EC2), после этого в 2009~г. компания Google представила Google Apps.
