--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,7 @@
 \input{inc/1-virtualbox}
 \input{inc/2-owncloud}
 \input{inc/3-heroku}
+\input{inc/4-openstack}
 
 \appendix % Приложения
 \input{inc/a-appendix}
@@ -26,5 +27,6 @@
 \input{inc/c-appendix}
 \input{inc/d-appendix}
 \input{inc/e-appendix}
+\input{inc/f-appendix}
 
 \end{document}
