Изменен колонтитул, исправлены опечатки

--- a/inc/1-virtualbox.tex
+++ b/inc/1-virtualbox.tex
@@ -1,4 +1,4 @@
-\section[Лабораторная работа №1]{Лабораторная работа №1. \\
+\section[ЛР №1. Знакомство с виртуализацией, VirtualBox]{Лабораторная работа №1. \\
 Знакомство с виртуализацией. Система виртуализации Oracle VM VirtualBox}
 
 \textbf{Цель работы:} ознакомиться с основными понятиями виртуализации, системой виртуализации VirtualBox, научиться настраивать виртуальную машину (ВМ), совершать простейшие операции с ней, устанавливать операционную систему на ВМ.
