--- a/inc/2-owncloud.tex
+++ b/inc/2-owncloud.tex
@@ -1,4 +1,4 @@
-\section[Лабораторная работа №2]{Лабораторная работа №2. \\
+\section[ЛР №2. Модель обслуживания SaaS, ownCloud]{Лабораторная работа №2. \\
 Модель обслуживания SaaS (Software-as-a-Service) на примере развертывания облачного хранилища ownCloud}
 
 \textbf{Цель работы:} ознакомиться с основными моделями представления облачных услуг (SaaS, PaaS, IaaS), развернуть собственное облачное хранилище, доступное пользователям в пределах локальной сети.
