--- a/inc/3-heroku.tex
+++ b/inc/3-heroku.tex
@@ -1,4 +1,4 @@
-\section[Лабораторная работа №3]{Лабораторная работа №3. \\
+\section[ЛР №3. Модель обслуживания PaaS, Heroku]{Лабораторная работа №3. \\
 Модель обслуживания PaaS (Platform-as-a-Service) на примере деплоя приложения в Heroku}
 
 \textbf{Цель работы:} ознакомиться с моделью гибкой (agile) разработки программного обеспечения, развернуть приложение на Heroku, ознакомиться с системой контроля версий Git.
