--- a/inc/4-openstack.tex
+++ b/inc/4-openstack.tex
@@ -1,4 +1,4 @@
-\section[Лабораторная работа №3]{Лабораторная работа №4. \\
+\section[ЛР №4. Модель обслуживания IaaS, OpenStack]{Лабораторная работа №4. \\
 Модель обслуживания IaaS (Infrastructure-as-a-Service) на примере создания инстанса в OpenStack}
 
 \textbf{Цель работы:}
