--- a/inc/f-appendix.tex
+++ b/inc/f-appendix.tex
@@ -8,7 +8,7 @@
 После отправки заявки на вступление в закрытую группу возможно придется подождать несколько дней подтверждения заявки.
 Когда заявка подтверждена, то можно авторизоваться в панели\footnote{\url{https://x86.trystack.org/dashboard/auth/login/?next=/dashboard/}} TryStack с помощью аккаунта Facebook.
 
-После авторизации можно наблюдать интерфейс упрваления OpenStack (рис.~\ref{pic:ui}).
+После авторизации можно наблюдать интерфейс управления OpenStack (рис.~\ref{pic:ui}).
 \begin{figure}[ht]
     \centering
     \includegraphics[width=\linewidth]{4_ui}
@@ -162,7 +162,7 @@ OpenStack Nova
 # echo "<h1>Hello, this instance created by OpenStack.</h1>" > \
 > /var/www/html/index.nginx-debian.html
 # echo "<h3>Computer Science and Engineering, SevSU</h3>" >> \
-/var/www/html/index.nginx-debian.html
+> /var/www/html/index.nginx-debian.html
 \end{lstlisting}
 
 Заходим из веб-браузера по адресу инстанса (8.43.86.56) и видим наше небольшое <<веб-приложение>> (рис.~\ref{pic:html}).
