--- a/inc/preamble.tex
+++ b/inc/preamble.tex
@@ -70,7 +70,7 @@
 \makeatletter
 \newcommand*{\currentname}{\@currentlabelname}
 \renewcommand{\@oddhead}{\it \vbox{\hbox to \textwidth%
-    {\rm{\thepage \hfil \thesection.~\Sectionname}\strut}\hrule}}
+    {\rm{\thepage \hfil \Sectionname}\strut}\hrule}}
 \makeatother
     \fancyhf{} % Очистка текущих значений номеров страниц
 
