Добавлена теория по OpenStack

--- a/inc/2-owncloud.tex
+++ b/inc/2-owncloud.tex
@@ -1,5 +1,5 @@
 \section[ЛР №2. Модель обслуживания SaaS, ownCloud]{Лабораторная работа №2. \\
-Модель обслуживания SaaS (Software-as-a-Service) на примере развертывания облачного хранилища ownCloud}
+Модель обслуживания SaaS на примере развертывания облачного хранилища ownCloud}
 
 \textbf{Цель работы:} ознакомиться с основными моделями представления облачных услуг (SaaS, PaaS, IaaS), развернуть собственное облачное хранилище, доступное пользователям в пределах локальной сети.
 
@@ -84,7 +84,7 @@ ownCloud Server доступен для платформ Windows и Linux, ownCl
     \item Каковы основные преимущества использования облачных технологий?
     \item В чем состоит отличие SaaS от PaaS и IaaS?
     \item В чем состоят преимущества ownCloud по сравнению с Dropbox или другими облачными хранилищами? Недостатки?
-    \item Почему Skype можно отнести к модели SaaS?
+    \item Можно ли Skype можно отнести к модели SaaS, почему?
 \end{enumerate}
 
 \clearpage
