--- a/inc/4-openstack.tex
+++ b/inc/4-openstack.tex
@@ -1,24 +1,70 @@
 \section[ЛР №4. Модель обслуживания IaaS, OpenStack]{Лабораторная работа №4. \\
-Модель обслуживания IaaS (Infrastructure-as-a-Service) на примере создания инстанса в OpenStack}
+Модель обслуживания IaaS на примере создания инстанса в OpenStack}
 
-\textbf{Цель работы:}
+\textbf{Цель работы:} ознакомиться с веб-интерфейсом OpenStack, научиться настраивать сеть, создавать инстансы и управлять ими в OpenStack.
 
-\subsection{Краткие сведения о методологиях разработки ПО}
+\subsection{Краткие сведения об OpenStack}
 
+Ранее в лабораторной работе №3, мы уже использовали готовые PaaS-решения от облачных провайдеров, однако если же мы хотим использовать более гибкие решения или же самим стать облачным провайдером, то необходимо использование IaaS-решений, таких как OpenStack.
+
+С помощью OpenStack можно создавать платформы облачных вычислений для частных и публичных облаков.
+OpenStack был начат как совместный проект между Rackspace и NASA в 2010 году.
+С 2012 года им управляет некоммерческая организация OpenStack Foundation.
+
+Теперь OpenStack поддерживают более чем 500 сторонних организаций.
+OpenStack является открытым проектом, исходные коды распространяются под лицензией Apache 2.0.
+
+Помимо обеспечения IaaS-решений, OpenStack развивалась с течением времени, чтобы предоставлять другие услуги, как базы данных, системы хранения данных и прочее.
+
+Благодаря модульной архитектуре OpenStack, любой желающий может добавить дополнительные компоненты, чтобы получить специфические особенности или функциональные возможности.
+
+Некоторые из основных компонентов OpenStack:
+\begin{itemize}
+    \item Keystone, инструментом идентификации пользователей;
+    \item Nova, диспетчер облачного процесса вычислений;
+    \item Horizon, панель управления для OpenStack;
+    \item Neutron, реализация сети в качестве сервиса, обеспечение сетевых возможностей для различных компонентов;
+    \item Glance, используется для управления образами ОС, которые требуются для работающих экземпляров (инстансов);
+    \item Swift, распределенное хранилище высокой доступности;
+    \item Cinder, блочное хранилище;
+    \item Heat, инструмент оркестровки, позволяет запускать готовые облачные архитектуры из шаблонов, описанных текстом;
+    \item Celiometer, инструмент для сбора различных статистических данных в облаке.
+\end{itemize}
+
+Каждый из компонентов OpenStack является также модульным.
+Например, с помощью Nova мы можем выбрать гипервизор в зависимости от требований, Libvirt (QEMU/KVM), Hyper-V, VMware, XenServer, Xen с Libvirt.
+
+Преимущества использования OpenStack:
+\begin{itemize}
+    \item решение с открытым исходным кодом;
+    \item платформа облачных вычислений для публичных и частных облаков;
+    \item предлагает гибкое и настраиваемое окружение;
+    \item обеспечивает высокий уровень безопасности;
+    \item облегчает автоматизацию на протяжении всех этапов жизненного цикла облака;
+    \item за счет снижения затрат на управление системой и привязанности к вендору, это может быть экономически эффективным.
+\end{itemize}
 
 \subsection{Порядок выполнения работы}
 
+Для выполнения данной лабораторной работы необходим аккаунт на Facebook.
+
+Пример работы с TryStack представлен в прил.~\ref{pril:f}.
+
 \begin{enumerate}
-    \item 1
-    \item 2
+    \item Вступить в группу TryStack на Facebook;
+    \item Авторизоваться на сервисе TryStack;
+    \item Ознакомиться с интерфейсом OpenStack;
+    \item Согласно прил.~\ref{pril:f} настроить окружение для создания инстанса;
+    \item Создать тестовый инстанс и разместить любое приложение (по желанию);
+    \item Проверить работоспособность приложения в облаке.
 \end{enumerate}
 
 \subsection{Контрольные вопросы}
 \begin{enumerate}
-    \item 1
-    \item 2
-    \item 3
-    \item 4
+    \item В чем преимущество и недостатки использования IaaS перед PaaS?
+    \item Назовите несколько примеров облачных поставщиков IaaS?
+    \item Почему использование SSH-ключей безопаснее чем парольная аутентификация?
+    \item В чем преимущество модульной архитектуры перед монолитной?
 \end{enumerate}
 
 \clearpage
