--- a/inc/a-appendix.tex
+++ b/inc/a-appendix.tex
@@ -1,4 +1,4 @@
-\section{Пример создания виртуальной машины в Oracle VM VirtualBox} \label{pril:a}
+\section{Создание виртуальной машины в Oracle VM VirtualBox} \label{pril:a}
 
 \begin{figure}[ht]
     \centering
