--- a/inc/b-appendix.tex
+++ b/inc/b-appendix.tex
@@ -1,4 +1,4 @@
-\section{Пример установки Debian GNU/Linux в VirtualBox} \label{pril:b}
+\section{Установка Debian GNU/Linux в VirtualBox} \label{pril:b}
 
 \begin{figure}[ht]
     \centering
