--- a/inc/c-appendix.tex
+++ b/inc/c-appendix.tex
@@ -1,4 +1,4 @@
-\section{Пример установки ownCloud Server в Debian GNU/Linux} \label{pril:c}
+\section{Установка ownCloud Server в Debian GNU/Linux} \label{pril:c}
 
 После успешного входа в систему, в первую очередь необходимо получить права суперпользователя\footnote{Пароль пользователя не отображается на экране во время набора}:
 \begin{lstlisting}
