--- a/inc/e-appendix.tex
+++ b/inc/e-appendix.tex
@@ -1,4 +1,4 @@
-\section{Пример деплоя приложения на Heroku} \label{pril:e}
+\section{Деплой приложения на Heroku} \label{pril:e}
 
 Для регистрации в Heroku\footnote{\url{https://signup.heroku.com/login}} необходима только электронная почта (рис.~\ref{pic:heroku_reg}).
 \begin{figure}[ht]
