Изменил имя в README и адрес репозитория

--- a/inc/preamble.tex
+++ b/inc/preamble.tex
@@ -47,7 +47,7 @@
     colorlinks, linkcolor={linkcolor},
     citecolor={citecolor}, urlcolor={urlcolor},
     pdfauthor={Amet Umerov},
-    pdfproducer={https://github.com/Amet13/metod-oblaka-grid},
+    pdfproducer={https://github.com/Amet13/metod-oblaka},
     pdftitle={Cloud computing}
 }
 
