--- a/inc/title.tex
+++ b/inc/title.tex
@@ -12,9 +12,9 @@
 по дисциплине <<Основы облачных технологий>>} % Заголовок
 
 \vspace{1em}
-\Large{А.Р.~Умеров}\footnote{\texttt{admin@amet13.name}} % Автор
+\Large{А.Р.~Умеров}\footnote{\texttt{admin@amet13.name}} % Автор 1
 
-\Large{Е.Н.~Мащенко}\footnote{\texttt{elmachenko@mail.ru}} % Автор
+\Large{Е.Н.~Мащенко}\footnote{\texttt{elmachenko@mail.ru}} % Автор 2
 
 \Large{\today}\footnote{Дата последней правки документа} % Дата
 \end{center}
