Добавил ссылку на титуле

--- a/inc/2-owncloud.tex
+++ b/inc/2-owncloud.tex
@@ -73,7 +73,7 @@ ownCloud Server доступен для платформ Windows и Linux, ownCl
 \begin{enumerate}
     \item Установить\footnote{Пример установки ownCloud Server представлен в прил.~\ref{pril:c}} ownCloud Server в виртуальную машину;
     \item На хост-машине или на другом компьютере сети скачать\footnote{\url{https://owncloud.org/install/}} и установить ownCloud Client;
-    \item Подключить ownCloud Client к серверу во время первого запуска клиента, а также синхронизировать все данные с сервера\footnote{Скриншоты настройки ownCloud Client представлены в прил.~\ref{pril:d}};
+    \item Подключить ownCloud Client к серверу во время первого запуска клиента, а также синхронизировать все данные с сервера\footnote{Пример настройки ownCloud Client представлен в прил.~\ref{pril:d}};
     \item Проверить работу синхронизации данных между клиентом и сервером (создать, удалить, переместить файл или каталог);
     \item Предоставить публичную ссылку на файл или каталог и проверить его доступность в пределах локальной сети;
     \item Ознакомиться с дополнительными возможностями ownCloud.
