--- a/inc/a-appendix.tex
+++ b/inc/a-appendix.tex
@@ -2,7 +2,7 @@
 
 \begin{figure}[ht]
     \centering
-	\includegraphics[width=0.8\linewidth]{Screenshot}
+	\includegraphics[width=\linewidth]{Screenshot}
 	\includegraphics[width=0.95\linewidth]{Screenshot-1}
 \end{figure}
 
