--- a/inc/d-appendix.tex
+++ b/inc/d-appendix.tex
@@ -1,4 +1,4 @@
-\section{Настройка подключения ownCloud Client к серверу} \label{pril:d}
+\section{Подключение ownCloud Client к серверу} \label{pril:d}
 
 \begin{figure}[ht]
     \centering
