--- a/inc/title.tex
+++ b/inc/title.tex
@@ -16,7 +16,7 @@
 
 \Large{Е.Н.~Мащенко}\footnote{\texttt{elmachenko@mail.ru}} % Автор 2
 
-\Large{\today}\footnote{Дата последней правки документа} % Дата
+\Large{\today}\footnote{Последняя правка документа: \url{https://github.com/Amet13/metod-oblaka}} % Дата
 \end{center}
 
 \clearpage % Конец страницы
