Заменил картинки, поправил 1 лабораторку

--- a/inc/preamble.tex
+++ b/inc/preamble.tex
@@ -10,11 +10,11 @@
 \usepackage[english, russian]{babel}	% Языки: русский, английский
 \usepackage{pscyr}						% Красивые русские шрифты
 
-\usepackage[scale=0.8]{geometry} % Простой способ задавать поля
-	\geometry{top=30mm} %15mm
-	\geometry{bottom=20mm}
-	\geometry{left=30mm}
-	\geometry{right=20mm}
+\usepackage{geometry} % Простой способ задавать поля
+	\geometry{top=25mm}
+	\geometry{bottom=15mm}
+	\geometry{left=25mm}
+	\geometry{right=15mm}
 
 %%% Математические пакеты %%%
 \usepackage{amsthm,amsfonts,amsmath,amssymb,amscd} % Математические дополнения от AMS
