--- a/inc/title.tex
+++ b/inc/title.tex
@@ -1,22 +1,27 @@
 %%% Титульный лист %%%
 
 \begin{center}
+
 \Large{Севастопольский государственный университет}
-\end{center}
 
 {~}\bigskip % Большой отступ сверху
 
-\begin{center}
+{~}\bigskip
+
+{~}\bigskip
+
 \Huge{Методические указания \\
 к выполнению лабораторных работ \\
 по дисциплине <<Основы облачных технологий>>} % Заголовок
 
 \vspace{1em}
+
 \Large{А.Р.~Умеров}\footnote{\texttt{admin@amet13.name}} % Автор 1
 
 \Large{Е.Н.~Мащенко}\footnote{\texttt{elmachenko@mail.ru}} % Автор 2
 
-\Large{\today}\footnote{Последняя правка документа: \url{https://github.com/Amet13/metod-oblaka}} % Дата
+\Large{\today}\footnote{Дата последней правки \url{https://github.com/Amet13/metod-oblaka}} % Дата
+
 \end{center}
 
 \clearpage % Конец страницы
